[package]
name = "ach_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
toml = "0.8"

[lib]
name = "ach_agent"
path = "src/lib.rs"
